# Final Project/docs/swagger.yaml
@@ -23,83 +23,6 @@ definitions:
       status:
         type: integer
     type: object
-  main.CreateCommentRequest:
-    properties:
-      message:
-        example: required
-        type: string
-      photo_id:
-        type: string
-    type: object
-  main.LoginRequest:
-    properties:
-      email:
-        example: aditya.kristianto@mncgroup.com
-        type: string
-      password:
-        example: hacktiv8
-        type: string
-    type: object
-  main.PhotoRequest:
-    properties:
-      caption:
-        example: echo
-        type: string
-      photo_url:
-        example: https://cdn.labstack.com/images/echo-logo.svg
-        type: string
-      title:
-        example: echo_golang
-        type: string
-    type: object
-  main.RegisterRequest:
-    properties:
-      age:
-        example: 31
-        type: integer
-      email:
-        example: aditya.kristianto@mncgroup.com
-        type: string
-      password:
-        example: hacktiv8
-        type: string
-      username:
-        example: aditya.kristianto
-        type: string
-    type: object
-  main.Response:
-    properties:
-      error: {}
-      message:
-        type: string
-      payload: {}
-      status:
-        type: integer
-    type: object
-  main.SocialMediaRequest:
-    properties:
-      name:
-        example: linkedin
-        type: string
-      social_media_url:
-        example: https://www.linkedin.com/in/aditya-kristianto
-        type: string
-    type: object
-  main.UpdateCommentRequest:
-    properties:
-      message:
-        example: required
-        type: string
-    type: object
-  main.UpdateUserRequest:
-    properties:
-      email:
-        example: aditya.kristianto@mncgroup.com
-        type: string
-      username:
-        example: aditya.kristianto
-        type: string
-    type: object
   photo.PhotoRequest:
     properties:
       caption:
