# Final Project/internal/app/socialmedia/controller.go
@@ -62,14 +62,21 @@ func (s *Controller) CreateSocialmedias(c echo.Context) (err error) {
 
 	socialmedia, err := s.service.CreateSocialmedia(&userID, req)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, &helper.Response{
-			Status:  http.StatusInternalServerError,
+		return c.JSON(http.StatusBadRequest, &helper.Response{
+			Status:  http.StatusBadRequest,
 			Message: "Failed create social media",
 			Error:   err.Error(),
 		})
 	}
 
-	return c.JSON(http.StatusCreated, socialmedia)
+	resp := &CreateResponse{
+		ID:             socialmedia.ID,
+		Name:           socialmedia.Name,
+		SocialMediaURL: socialmedia.SocialMediaURL,
+		UserID:         socialmedia.UserID,
+		CreatedAt:      socialmedia.CreatedAt,
+	}
+	return c.JSON(http.StatusCreated, resp)
 }
 
 // GetSocialmedias godoc
@@ -89,12 +96,20 @@ func (s *Controller) CreateSocialmedias(c echo.Context) (err error) {
 func (s *Controller) GetSocialmedias(c echo.Context) (err error) {
 	userID := helper.GetUserID(c)
 	if err != nil {
-		return err
+		return c.JSON(http.StatusBadRequest, &helper.Response{
+			Status:  http.StatusBadRequest,
+			Message: "Failed get social media",
+			Error:   err.Error(),
+		})
 	}
 
 	socialmedias, err := s.service.GetSocialmedia(&userID)
 	if err != nil {
-		return err
+		return c.JSON(http.StatusBadRequest, &helper.Response{
+			Status:  http.StatusBadRequest,
+			Message: "Failed get social media",
+			Error:   err.Error(),
+		})
 	}
 
 	return c.JSON(http.StatusOK, echo.Map{
@@ -140,7 +155,11 @@ func (s *Controller) UpdateSocialmedias(c echo.Context) (err error) {
 
 	socialmedia, err := s.service.UpdateSocialmedia(&socialmediaId, &userID, req)
 	if err != nil {
-		return err
+		return c.JSON(http.StatusBadRequest, &helper.Response{
+			Status:  http.StatusBadRequest,
+			Message: "Failed update social media",
+			Error:   err.Error(),
+		})
 	}
 
 	return c.JSON(http.StatusOK, socialmedia)
@@ -162,14 +181,24 @@ func (s *Controller) UpdateSocialmedias(c echo.Context) (err error) {
 // @Failure      500  {object}  helper.Response
 // @Router       /socialmedias/{socialMediaId} [delete]
 func (s *Controller) DeleteSocialmedias(c echo.Context) (err error) {
+	userID := helper.GetUserID(c)
+
 	socialmediaId, err := uuid.Parse(c.Param("socialMediaId"))
 	if err != nil {
-		return err
+		return c.JSON(http.StatusBadRequest, &helper.Response{
+			Status:  http.StatusBadRequest,
+			Message: "Failed delete social media",
+			Error:   err.Error(),
+		})
 	}
 
-	err = s.service.DeleteSocialmedia(&socialmediaId)
+	err = s.service.DeleteSocialmedia(&socialmediaId, &userID)
 	if err != nil {
-		return err
+		return c.JSON(http.StatusBadRequest, &helper.Response{
+			Status:  http.StatusBadRequest,
+			Message: "Failed delete social media",
+			Error:   err.Error(),
+		})
 	}
 
 	return c.JSON(http.StatusOK, helper.Response{
